--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
+  height: 100vh;
+  width: 375px;
+  margin: 0 0;
+  background-color: #eee;
 }
 
 .App-logo {
