--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: '微软雅黑',"Poppins","PingFang SC" !important;
+}
+body{
+  background-color: #eee;
 }
 .App {
   text-align: center;
   height: 100vh;
   width: 375px;
   margin: 0 0;
-  background-color: #eee;
 }
 
 .App-logo {
@@ -43,4 +46,59 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+.adm-tabs-tab{
+  padding-bottom: 14px;
+}
+.adm-pull-to-refresh-head-content{
+  font-size: 14px;
 }
