--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,17 @@
-.App{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 0;
-    width: 100vw;
-    height: 100vh;
-    .router-view{
-        flex: 1;
-    }
-    .footer{
-        height: 80px;
-        background-color: #ccc;
-    }
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0;
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+  padding-bottom: 50px;
+  .router-view {
+    flex: 1;
+    overflow: hidden;
+  }
+  .footer {
+    background-color: white;
+  }
 }
