--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,13 +1,10 @@
-footer {
-  height: 100%;
-  ul {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: space-around;
-    li {
-      list-style: none;
-    }
-  }
+.footer-nav {
+  flex: 0;
+  box-shadow: 0px -2px 10px #ccc;
+  position: relative;
+  z-index: 2000;
+  position: fixed;
+  bottom:0;
+  width: 100%;
+  background: white;
 }
