--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -2,7 +2,8 @@
   .mine-nav {
     width: 100%;
     height: 116px;
-    background-color: #333;
+    background: url("../../assets/images/mine_bg.png");
+    background-size: 100% 100%;
     position: relative;
     .nav-msg {
       display: flex;
@@ -13,14 +14,15 @@
       p {
         font-size: 20px;
         font-weight: 500;
+        color: #333;
       }
     }
     .account-box {
       position: absolute;
       width: 92%;
       height: 104px;
-      box-shadow: 0 0 15px #666;
-      border-radius: 4px;
+      box-shadow: 0 0 15px #eee;
+      border-radius: 8px;
       left: 50%;
       margin-left: -46%;
       bottom: -50px;
@@ -30,7 +32,7 @@
       text-align: left;
       p:first-child {
         margin-bottom: 16px;
-        color: #bbb;
+        color: #999;
       }
       p:last-child {
         font-weight: 500;
@@ -39,7 +41,12 @@
     }
   }
   .mine-assets-manage {
-    padding: 12px 16px;
+    width: 92%;
+    box-shadow: 0 0 15px #eee;
+    border-radius: 8px;
+    margin: 0 auto;
+    padding: 16px;
+    box-sizing: border-box;
     background-color: white;
     margin-top: 64px;
     .manage-title {
@@ -63,8 +70,8 @@
       padding-top: 18px;
       li {
         img {
-          width: 26px;
-          height: 26px;
+          width: 30px;
+          height: 30px;
           margin-bottom: 6px;
         }
         p {
@@ -72,6 +79,9 @@
           color: #9d9c9d;
         }
       }
+    }
+    .with-three {
+      justify-content: space-around;
     }
   }
   .mine-inv {
@@ -86,19 +96,24 @@
           font-size: 12px;
           color: #333;
           margin-left: 12px;
-          span{
+          span {
             margin-right: 4px;
           }
         }
       }
     }
   }
-  .mine-oper-bar{
+  .mine-oper-bar {
+    width: 92%;
+    margin: 0 auto;
+    border-radius: 8px;
+    overflow: hidden;
     margin-top: 12px;
     text-align: left;
     font-size: 12px;
-    .--font-size{
-        font-size: 12px;
+    box-shadow: 0 0 15px #eee;
+    .--font-size {
+      font-size: 12px;
     }
   }
 }
