--- a/src/route/index.css
+++ b/src/route/index.css
@@ -1,34 +1,53 @@
-.dg-enter {
-    transform: translateX(200px)
+.page-enter {
+    opacity: 0;
+    transform: scale(1.1);
 }
 
-.dg-enter-active {
-    transition: 2s;
-    transform: translateX(0px)
+.page-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms, transform 300ms;
 }
 
-.dg-enter-done {
-    transform: translateX(0px)
+.page-exit {
+    opacity: 1;
+    transform: scale(1);
 }
 
-/* 出场动画过程 */
-.dg-exit {
-    transform: translateX(0px)
-}
-
-.dg-exit-active {
-    transition: 2s;
-    transform: translateX(200px)
-}
-
-.dg-exit-done {
-    transform: translateX(200px)
-}
-
-.home,
-.user,
-.login,
-.animate {
+.page-exit-active {
     position: absolute;
-    left: calc(50% - 200px)
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 0, transform 0;
+}
+
+/* .fade-enter {
+    opacity: 0;
+    z-index: 1;
+  }
+  
+  .fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+  } */
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+    left: 100% !important;
+}
+
+.fade-enter.fade-enter-active {
+    opacity: 1;
+    left: 0 !important;
+    transition: all 300ms ease-in;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit-active {
+    opacity: 0;
+    transition: opacity 300ms ease-in;
+    /* transition: opacity 300ms, transform 300ms; */
 }
