--- a/src/views/trade/index.scss
+++ b/src/views/trade/index.scss
@@ -70,6 +70,10 @@
       }
       .trade-count {
         margin-bottom: 12px;
+        width: 100%;
+        .adm-stepper{
+          width: 100%;
+        }
       }
       .use-balance {
         display: flex;
