--- a/src/route/index.css
+++ b/src/route/index.css
@@ -1,53 +1,25 @@
 .page-enter {
     opacity: 0;
-    transform: scale(1.1);
+    transform:translateX(15px);
+    height: 100vh;
 }
 
 .page-enter-active {
     opacity: 1;
-    transform: scale(1);
+    transform:translateX(0);
     transition: opacity 300ms, transform 300ms;
 }
 
 .page-exit {
     opacity: 1;
-    transform: scale(1);
+    transform:translateX(0);
 }
 
 .page-exit-active {
     position: absolute;
+    z-index: -1;
+    top: 0;
     opacity: 0;
-    transform: scale(0.9);
+    transform: translateX(-15px);
     transition: opacity 0, transform 0;
-}
-
-/* .fade-enter {
-    opacity: 0;
-    z-index: 1;
-  }
-  
-  .fade-enter.fade-enter-active {
-    opacity: 1;
-    transition: opacity 250ms ease-in;
-  } */
-.fade-enter {
-    opacity: 0;
-    z-index: 1;
-    left: 100% !important;
-}
-
-.fade-enter.fade-enter-active {
-    opacity: 1;
-    left: 0 !important;
-    transition: all 300ms ease-in;
-}
-
-.fade-exit {
-    opacity: 1;
-}
-
-.fade-exit-active {
-    opacity: 0;
-    transition: opacity 300ms ease-in;
-    /* transition: opacity 300ms, transform 300ms; */
 }
