--- a/src/views/mine/mine_assets/recharge/index.scss
+++ b/src/views/mine/mine_assets/recharge/index.scss
@@ -42,7 +42,7 @@
       height: 44px;
       width: 100%;
       line-height: 44px;
-      background-color: #2cbc94;
+      background-color: #3070ff;
       color: white;
       margin-top: 20px;
     }
