--- a/src/components/inner_nav/nav.scss
+++ b/src/components/inner_nav/nav.scss
@@ -11,6 +11,28 @@
   .right-oper{
     transform: translateX(-12px);
   }
+  .search-inp{
+    width: 86px;
+    position: absolute;
+    right: 0;
+    top: -14px;
+    input{
+      width: 100%;
+      border-radius: 14px;
+      background-color: #F8F8F8;
+      border: 0;
+      outline: none;
+      height: 30px;
+      padding-left: 28px;
+    }
+    span{
+      position: absolute;
+      left: 6px;
+      top: 6px;
+      font-size: 12px;
+      color: #999;
+    }
+  }
 }
 .with-border-nav{
     border-bottom: 1px solid #eee;
