--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -16,12 +16,15 @@
   }
   .home-banner {
     width: 100%;
-    background-color: white;
+    background-color: #f8f8f8;
     .banner-items {
       height: 180px;
       img {
         width: 100%;
         height: 100%;
+      }
+      p{
+        line-height: 180px;
       }
     }
   }
