--- a/src/views/quotes/tes_detail/index.scss
+++ b/src/views/quotes/tes_detail/index.scss
@@ -1,4 +1,24 @@
 .tes-detail {
+  .load-data {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    div {
+      width: 30%;
+      height: 100px;
+      background-color: white;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
   .tes-price-msg {
     padding: 18px 12px;
     background-color: white;
@@ -16,13 +36,22 @@
     }
     .price-box {
       p {
-        color: #00c087;
         font-weight: bold;
         font-size: 16px;
       }
       p:first-child {
         font-size: 30px;
         margin-bottom: 4px;
+      }
+    }
+    .up-color {
+      p {
+        color: #00c087;
+      }
+    }
+    .down-color {
+      p {
+        color: #ff7858;
       }
     }
     .price-high {
@@ -68,7 +97,7 @@
       li {
         .deal-cen {
           p:last-child {
-            transform: translateX(-8px);
+            transform: translateX(-16px);
           }
         }
       }
@@ -92,7 +121,7 @@
           text-align: right;
         }
         .deal-cen {
-          width: 90px;
+          width: 120px;
           justify-content: space-between;
           display: flex;
           p {
