--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,24 @@
 .adm-dropdown-nav{
   border: 0!important;
 }
+.load-data {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2400;
+  div {
+    width: 30%;
+    height: 100px;
+    background-color: white;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
