--- a/src/App.scss
+++ b/src/App.scss
@@ -47,12 +47,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2400;
+  z-index: 9999;
   div {
     width: 30%;
     height: 100px;
@@ -62,4 +62,7 @@
     align-items: center;
     justify-content: center;
   }
+}
+.adm-popup{
+  z-index: 5000;
 }
