--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -59,8 +59,38 @@
         filter: grayscale(100%);
       }
     }
+    .select-country {
+      input {
+        padding-left: 12px;
+      }
+      span {
+        left: auto;
+        right: 12px;
+      }
+      .mask-select {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+      }
+      .adm-dropdown-item-title-text {
+        display: inline-block;
+        width: 100%;
+      }
+    }
     .login-btn {
       margin-top: 54px;
     }
+  }
+}
+.adm-picker-view{
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.select-country-popup{
+  padding: 12px;
+  p{
+    text-align: right;
   }
 }
