--- a/src/views/setting/help/index.scss
+++ b/src/views/setting/help/index.scss
@@ -1,34 +1,24 @@
 .help-index {
   .help-list {
-    .list-con {
-      width: 92%;
-      margin: 12px auto;
-      background-color: white;
-      border-radius: 8px;
-      padding: 16px 12px;
-      text-align: left;
-      .parent-title {
-        font-size: 16px;
-        font-weight: 500;
-        color: #333;
-        margin-bottom: 16px;
-      }
-      ul {
-        li {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-top: 12px;
-          .title-msg {
-            p:first-child {
-              font-size: 14px;
-              font-weight: 500;
-              margin-bottom: 12px;
-            }
-            p:last-child{
-                color: #999;
-                font-size: 13px;
-            }
+    ul {
+      padding: 12px;
+      li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 12px;
+        padding: 12px;
+        background-color: white;
+        text-align: left;
+        .title-msg {
+          p:first-child {
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 12px;
+          }
+          p:last-child {
+            color: #999;
+            font-size: 13px;
           }
         }
       }
