--- a/src/views/quotes/tes_detail/index.scss
+++ b/src/views/quotes/tes_detail/index.scss
@@ -118,6 +118,11 @@
           }
         }
       }
+      .show-more{
+        justify-content: center;
+        padding-top: 8px;
+        color: #3070ff;
+      }
     }
   }
   .trade-btn {
