--- a/src/App.scss
+++ b/src/App.scss
@@ -29,18 +29,18 @@
   top: 0;
   touch-action: none;
   left: 0;
-  transition: .4s all;
+  transition: 0.4s all;
   img {
     width: 100%;
     height: 100%;
   }
 }
-.load-end{
+.load-end {
   opacity: 0;
   display: none;
 }
-.adm-dropdown-nav{
-  border: 0!important;
+.adm-dropdown-nav {
+  border: 0 !important;
 }
 .load-data {
   position: fixed;
@@ -63,9 +63,19 @@
     justify-content: center;
   }
 }
-.adm-popup{
+.adm-popup {
   z-index: 5000;
 }
-.adm-toast-mask{
-  z-index: 8000!important;
+.adm-toast-mask {
+  z-index: 8000 !important;
+}
+.load-list {
+  height: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.adm-popover {
+  z-index: 5100;
 }
