--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -7,10 +7,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 16px;
     border-bottom: 1px solid #eee;
     img {
-      width: 94px;
+      // width: 110px;
       height: 28px;
     }
   }
