--- a/src/views/mine/mine_assets/withdraw/index.scss
+++ b/src/views/mine/mine_assets/withdraw/index.scss
@@ -30,6 +30,11 @@
         color: #999;
         top: 40px;
       }
+      .oper-icon{
+        position: absolute;
+        right: 16px;
+        top:38px;
+      }
       input::placeholder {
         color: #999;
       }
