--- a/src/views/mine/mine_assets/withdraw/index.scss
+++ b/src/views/mine/mine_assets/withdraw/index.scss
@@ -34,6 +34,9 @@
         position: absolute;
         right: 16px;
         top:38px;
+        img{
+          width: 18px;
+        }
       }
       input::placeholder {
         color: #999;
