--- a/src/views/safe/index.scss
+++ b/src/views/safe/index.scss
@@ -4,7 +4,8 @@
     width: 92%;
     margin: 16px auto;
     font-size: 12px;
-    text-align: center;
+    line-height: 16px;
+    text-align: left;
     padding: 12px;
     color: #d2a820;
     background-color: #f5f3e6;
