--- a/.env.master
+++ b/.env.master
@@ -1,4 +1,5 @@
-REACT_APP_NODE_ENV = 'production'
+REACT_APP_NODE_ENV = 'development'
 NODE_ENV = 'development'
 REACT_APP_CURRENTMODE = 'dev'
-REACT_APP_BASEURL = 'https://www.jd.com'
+REACT_APP_BASEURL = 'https://www.bibitrades.net/api/v1'
+REACT_APP_SHARE = 'https://www.bibitrades.net'
