--- a/src/views/trade/index.scss
+++ b/src/views/trade/index.scss
@@ -263,11 +263,16 @@
   }
 }
 .trade-filter-draw {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
   .adm-tabs-header {
     border-bottom: 0;
   }
   .draw-title {
     height: 44px;
+    min-height: 44px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -275,14 +280,20 @@
     border-bottom: 1px solid #eee;
   }
   .tes-tabs {
-    background-color: white;
+    flex: 1;
     padding-top: 6px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
   }
+
   .tes-all-list {
     background-color: white;
+    flex: 1;
     padding: 16px;
     padding-top: 0;
     margin-top: 6px;
+    overflow: auto;
     ul {
       li {
         display: flex;
@@ -339,6 +350,9 @@
         }
       }
     }
+  }
+  .tes-all-list::-webkit-scrollbar {
+    display: none;
   }
 }
 .order-list {
