--- a/.env.master
+++ b/.env.master
@@ -3,3 +3,6 @@ NODE_ENV = 'development'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = 'https://www.bibitrades.net/api/v1'
 REACT_APP_SHARE = 'https://www.bibitrades.net'
+REACT_APP_COIN = 'PHP'
+REACT_APP_AREA = '63'
+REACT_APP_LANGUAGE = 'en'
