--- a/src/views/forget/index.scss
+++ b/src/views/forget/index.scss
@@ -5,21 +5,88 @@
   position: fixed;
   top: 0;
   left: 0;
+  .int-bg-box {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: url("../../assets/images/int_bg.png");
+    background-size: 100% 100%;
+    top: 0;
+    left: 0;
+    z-index: 200;
+  }
+  .up-bg-box {
+    position: relative;
+    z-index: 300;
+  }
   .close-page {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     img {
       width: 24px;
       height: 24px;
     }
     padding: 12px 16px;
+    .language-box {
+      padding: 4px 11px;
+      border-radius: 18px;
+      border: 1px solid rgba(94, 102, 112, 0.3);
+      display: flex;
+      align-items: center;
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 6px;
+      }
+    }
   }
   .page-remark {
-    margin-top: 80px;
-    text-align: left;
-    padding-left: 20px;
-    font-size: 22px;
-    font-weight: 500;
+    margin-top: 16px;
+    text-align: center;
+    img {
+      width: 128px;
+      height: 48px;
+    }
+    p {
+      margin-top: 12px;
+      font-size: 26px;
+      font-weight: 500;
+      color: #40474f;
+    }
+  }
+  .register-way {
+    width: 100%;
+    margin-top: 30px;
+    ul {
+      display: flex;
+      justify-content: center;
+      li {
+        padding: 8px 24px;
+        border-radius: 4px;
+        font-size: 18px;
+        color: #666;
+        font-weight: 500;
+        transition: 0.3s all;
+      }
+      li:nth-child(2) {
+        padding: 0;
+        margin: 0 40px;
+        display: flex;
+        align-items: center;
+      }
+      li:nth-child(2)::before {
+        content: "";
+        width: 1px;
+        height: 12px;
+        background-color: #cccccc;
+        display: inline-block;
+      }
+      .active-intway {
+        background-color: #eaf3ff;
+        color: #1677ff;
+      }
+    }
   }
   .login-box {
     margin-top: 44px;
@@ -54,8 +121,30 @@
         right: 12px;
         top: 37px;
       }
+      .select-perfix {
+        position: absolute;
+        left: 34px;
+        top: 57%;
+        font-size: 14px;
+        color: #666;
+        display: flex;
+        align-items: center;
+      }
+      .select-perfix::after {
+        content: "";
+        display: inline-block;
+        height: 12px;
+        width: 1px;
+        background-color: #ccc;
+        margin-left: 12px;
+      }
       .gra-btn {
         filter: grayscale(100%);
+      }
+    }
+    .other-p-l {
+      input {
+        padding-left: 80px;
       }
     }
     .login-btn {
