--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -5,21 +5,55 @@
   position: fixed;
   top: 0;
   left: 0;
+  .int-bg-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url("../../assets/images/int_bg.png");
+    background-size: 100% 100%;
+    z-index: 200;
+    width: 100%;
+    height: 100vh;
+  }
+  .up-bg-box {
+    position: relative;
+    z-index: 300;
+  }
   .close-page {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     img {
       width: 24px;
       height: 24px;
     }
     padding: 12px 16px;
+    .language-box {
+      padding: 4px 11px;
+      border-radius: 18px;
+      border: 1px solid rgba(94, 102, 112, 0.3);
+      display: flex;
+      align-items: center;
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 6px;
+      }
+    }
   }
   .page-remark {
-    margin-top: 80px;
-    text-align: left;
-    padding-left: 20px;
-    font-size: 22px;
-    font-weight: 500;
+    margin-top: 16px;
+    text-align: center;
+    img {
+      width: 128px;
+      height: 48px;
+    }
+    p {
+      margin-top: 12px;
+      font-size: 26px;
+      font-weight: 500;
+      color: #40474f;
+    }
   }
   .login-box {
     margin-top: 44px;
