--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -7,26 +7,94 @@
   left: 0;
   overflow: auto;
   padding-bottom: 24px;
+  .bg-box {
+    height: 100vh;
+    background: url("../../assets/images/int_bg.png");
+    background-size: 100% 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 200;
+  }
+  .up-bg-box {
+    position: relative;
+    z-index: 300;
+  }
   .close-page {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     img {
       width: 24px;
       height: 24px;
     }
     padding: 12px 16px;
+    .language-box {
+      padding: 4px 11px;
+      border-radius: 18px;
+      border: 1px solid rgba(94, 102, 112, 0.3);
+      display: flex;
+      align-items: center;
+      img {
+        width: 20px;
+        height: 20px;
+        margin-right: 6px;
+      }
+    }
   }
   .page-remark {
-    margin-top: 80px;
-    text-align: left;
-    padding-left: 20px;
-    font-size: 22px;
-    font-weight: 500;
+    margin-top: 16px;
+    text-align: center;
+    img {
+      width: 128px;
+      height: 48px;
+    }
+    p {
+      margin-top: 12px;
+      font-size: 26px;
+      font-weight: 500;
+      color: #40474f;
+    }
+  }
+  .register-way {
+    width: 100%;
+    margin-top: 30px;
+    ul {
+      display: flex;
+      justify-content: center;
+      li {
+        padding: 8px 24px;
+        border-radius: 4px;
+        font-size: 18px;
+        color: #666;
+        font-weight: 500;
+        transition: 0.3s all;
+      }
+      li:nth-child(2) {
+        padding: 0;
+        margin: 0 40px;
+        display: flex;
+        align-items: center;
+      }
+      li:nth-child(2)::before {
+        content: "";
+        width: 1px;
+        height: 12px;
+        background-color: #cccccc;
+        display: inline-block;
+      }
+      .active-intway {
+        background-color: #eaf3ff;
+        color: #1677ff;
+      }
+    }
   }
   .login-box {
     margin-top: 44px;
     padding: 0 20px;
     text-align: left;
+
     .box-public {
       margin-bottom: 16px;
       position: relative;
@@ -49,6 +117,23 @@
         margin-top: 2px;
         left: 8px;
       }
+      .select-perfix {
+        position: absolute;
+        left: 34px;
+        top: 57%;
+        font-size: 14px;
+        color: #666;
+        display: flex;
+        align-items: center;
+      }
+      .select-perfix::after {
+        content: "";
+        display: inline-block;
+        height: 12px;
+        width: 1px;
+        background-color: #ccc;
+        margin-left: 12px;
+      }
       .send-code {
         position: absolute;
         font-size: 14px;
@@ -59,6 +144,11 @@
 
       .gra-btn {
         filter: grayscale(100%);
+      }
+    }
+    .other-p-l {
+      input {
+        padding-left: 80px;
       }
     }
     .select-country {
@@ -100,5 +190,76 @@
   padding: 12px;
   p {
     text-align: right;
+  }
+}
+.select-area-code {
+  padding-top: 18px;
+  .select-title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+    align-items: center;
+    padding: 0 24px;
+    p {
+      font-size: 18px;
+      color: #333;
+      font-weight: 500;
+    }
+  }
+  .search-code {
+    width: calc(100% - 28px);
+    height: 40px;
+    display: flex;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    padding: 0 12px;
+    align-items: center;
+    margin: 0 auto;
+    span {
+      margin-right: 8px;
+    }
+    input {
+      height: 100%;
+      flex: 1;
+      outline: 0;
+      border: 0;
+    }
+  }
+  .code-list {
+    margin-top: 16px;
+    ul {
+      padding: 0 12px;
+      li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 6px;
+        padding: 12px;
+        .country-msg {
+          display: flex;
+          align-items: center;
+          .country-logo {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 10px;
+            img {
+              height: 100%;
+            }
+          }
+          p {
+            font-size: 15px;
+            color: #333;
+          }
+        }
+      }
+      .active-area {
+        background-color: #f8f8f8;
+      }
+    }
   }
 }
