--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   margin: 0;
   width: 100vw;
+  max-width: 750px;
   height: 100%;
   overflow: hidden;
   padding-bottom: 50px;
