--- a/src/views/down/index.scss
+++ b/src/views/down/index.scss
@@ -5,22 +5,134 @@
   top: 0;
   left: 0;
   overflow: auto;
-  .click-box{
+  .click-box {
     width: 50%;
     height: 100vh;
     position: absolute;
-    top:0;
+    top: 0;
+    z-index: 200;
   }
-  .left-android{
+  .left-android {
     left: 0;
   }
-  .right-ios{
+  .right-ios {
     right: 0;
   }
-  img{
+  img {
     width: 100%;
   }
+  .back-icon {
+    position: absolute;
+    z-index: 300;
+    width: 28px;
+    height: 28px;
+    top: 30px;
+    left: 12px;
+  }
+  .adm-center-popup-body {
+    padding-top: 0;
+  }
+  .adm-dialog-header {
+    padding: 0;
+  }
+  .guide-header {
+    width: 280px;
+    height: 100px;
+    background: url("../../assets/images/guide_bg.png");
+    background-size: 100% 100%;
+    display: flex;
+    flex-direction: column;
+    .close-icon {
+      display: flex;
+      justify-content: flex-end;
+      padding: 14px 12px 0 0;
+      color: white;
+    }
+    .header-title {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding-bottom: 12px;
+      p {
+        font-size: 14px;
+        color: #333;
+        font-weight: 600;
+      }
+    }
+  }
+  .guide-box {
+    padding: 8px 17px;
+    max-width: 280px;
+    ul {
+      overflow: hidden;
+      li {
+        display: flex;
+      }
+      .con-li {
+        img {
+          width: 132px;
+          height: 110px;
+        }
+        .text-box {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          font-size: 12px;
+          color: #666;
+          text-align: left;
+        }
+      }
+      .left-tree {
+        .text-box {
+          margin-left: 8px;
+        }
+      }
+      .right-tree {
+        .text-box {
+          margin-right: 8px;
+        }
+      }
+      .line-li {
+        justify-content: center;
+        img {
+          width: 50px;
+          height: 26px;
+          margin: 12px 0;
+        }
+      }
+    }
+    .back-home {
+      margin: 24px 0;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      button {
+        background-color: #4f5eff;
+        padding: 0 12px;
+        height: 26px;
+        border-radius: 4px;
+        font-size: 14px;
+        color: white;
+        border: 0;
+        outline: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        img {
+          width: 14px;
+          height: 8px;
+          margin-left: 4px;
+        }
+      }
+    }
+  }
+  .adm-dialog-content {
+    padding: 0;
+  }
 }
-.down-index::-webkit-scrollbar{
-    display: none;
+.down-index::-webkit-scrollbar {
+  display: none;
 }
