--- a/src/views/safe/auth_card/index.scss
+++ b/src/views/safe/auth_card/index.scss
@@ -71,6 +71,7 @@
               left: 0;
               top: 0;
               opacity: 0;
+              z-index: 100;
             }
             p {
               font-size: 14px;
@@ -81,13 +82,13 @@
               width: 100%;
               height: 100%;
             }
-            .view-img-box{
+            .view-img-box {
               position: relative;
-              p{
+              p {
                 width: 100%;
                 height: 100%;
-                background-color: rgba(0,0,0,.3);
-                top:-6px;
+                background-color: rgba(0, 0, 0, 0.3);
+                top: -6px;
                 left: 0;
                 position: absolute;
                 line-height: 1;
@@ -96,7 +97,7 @@
                 align-items: center;
                 padding-top: 24px;
                 color: white;
-                span{
+                span {
                   margin-top: 8px;
                 }
               }
