--- a/src/views/mine/mine_assets/withdraw/index.scss
+++ b/src/views/mine/mine_assets/withdraw/index.scss
@@ -95,26 +95,11 @@
       padding: 10px;
       background-color: #f8f8f8;
       border-radius: 4px;
-      ul {
-        li {
-          font-size: 12px;
-          color: #999;
-          text-align: left;
-          position: relative;
-          padding-left: 8px;
-          margin-bottom: 6px;
-          line-height: 18px;
-        }
-        li::before {
-          content: "";
-          width: 3px;
-          height: 3px;
-          background: #999;
-          border-radius: 50%;
-          position: absolute;
-          left: 0;
-          top: 8px;
-        }
+      .danger-inner{
+        font-size: 12px;
+        color: #999;
+        text-align: left;
+        line-height: 24px;
       }
     }
   }
