--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0;
+  margin: 0 auto;
   width: 100vw;
   max-width: 750px;
   height: 100%;
