--- a/src/views/forget/index.scss
+++ b/src/views/forget/index.scss
@@ -152,3 +152,10 @@
     }
   }
 }
+@media screen and (min-width: 1280px) {
+  .forget-pass  {
+    width: 750px;
+    left: 50%;
+    margin-left: -375px;
+  }
+}
