--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -263,3 +263,12 @@
     }
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .register-index  {
+    width: 750px;
+    left: 50%;
+    margin-left: -375px;
+  }
+}
+
