--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
   z-index: 2020;
 }
 .load-view {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: fixed;
   z-index: 2400;
@@ -34,6 +34,13 @@
   img {
     width: 100%;
     height: 100%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .load-view {
+    width: 750px;
+    left: 50%;
+    margin-left: -375px;
   }
 }
 .load-end {
@@ -80,6 +87,6 @@
 .adm-popover {
   z-index: 5100;
 }
-.adm-tabs-header{
+.adm-tabs-header {
   border: 0;
 }
