--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -1,10 +1,12 @@
 .login-index {
   width: 100%;
   height: 100vh;
+  max-width: 750px;
   background-color: white;
   position: fixed;
   top: 0;
-  left: 0;
+  left: 50%;
+  margin-left: -50%;
   .int-bg-box {
     position: absolute;
     top: 0;
@@ -94,5 +96,12 @@
         font-size: 14px;
       }
     }
+  }
+}
+@media screen and (min-width: 1280px) {
+  .login-index {
+    width: 750px;
+    left: 50%;
+    margin-left: -375px;
   }
 }
