--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -171,6 +171,13 @@
         width: 100%;
       }
     }
+    .read-protocol{
+      .need-outline{
+        color: #1677FF;
+        font-weight: 500;
+        text-decoration: underline;
+      }
+    }
     .login-btn {
       margin-top: 54px;
     }
